Add in api changes
